--- a/.github/workflows/auto_euserv.yml
+++ b/.github/workflows/auto_euserv.yml
@@ -20,7 +20,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install requests beautifulsoup4
+        pip install requests beautifulsoup4 ddddocr
 
     - name: Run script
       env:
