更新 auto_euserv.yml

--- a/.github/workflows/auto_euserv.yml
+++ b/.github/workflows/auto_euserv.yml
@@ -1,8 +1,8 @@
 name: Auto EUserv
 
 on:
-  schedule:
-    - cron: '0 12 */3 * *'  # 每 3 天 UTC 时间 12:00 运行
+  #schedule:
+   # - cron: '0 12 */3 * *'  # 每 3 天 UTC 时间 12:00 运行
   workflow_dispatch:
 
 jobs:
